@@ -15,7 +15,12 @@ my $settings = $button -> get_settings();
 my $path = ($button -> path())[0];
 my $class_path = ($button -> class_path())[0];
 
-ok(!Gtk2::Rc -> get_style_by_paths($settings, $path, $class_path, Gtk2::Button::));
+my $retval = Gtk2::Rc -> get_style_by_paths($settings,
+                                            $path,
+                                            $class_path,
+                                            Gtk2::Button::);
+
+ok(not defined $retval or ref $retval eq "Gtk2::Style");
 
 # Gtk2::Rc -> parse(...);
 Gtk2::Rc -> parse_string(qq(style "blablabla" { }));
